Bxc 5188 ead to cdm indexing (#135)
* BXC-5188 generalize retrieve fields method

* BXC-5188 start tests

* BXC-5188 working on updating indexing command

* BXC-5188 update indexing command and tests

* BXC-5188 start making new TSV with cdm IDs

* BXC-5188 working on tests

* BXC-5188 splitting apart CDM index service and refactoring

* BXC-5188 further cleanup

* BXC-5188 consolidating code and cleanup